Mon Aug 21 19:40:23 2000 Luther J Baker  <luther@cs.wustl.edu>

	* pace/win32/pthread.c (pthread_attr_init):

	  Updated attr initialization in pthread_attr_init.

Fri Aug 18 17:57:42 2000  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/rules.common.GNU: Added section for HP-UX.

Fri Aug 18 12:30:51 2000  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/rules.common.GNU: Added section for AIX.

Wed Aug 16 17:31:43 2000  Luther J Baker  <luther@cs.wustl.edu>

	* pace/win32/pthread.h:
	* pace/win32/pthread.inl:
	* pace/win32/pthread.c:
	* pace/win32/pthreadtypes.h:
	* pace/win32/schedtypes.h:
	* pace/win32/TODO

	  More fabulous emulation updates!

Wed Aug 16 16:26:32 2000  Luther J Baker  <luther@cs.wustl.edu>

	* pace/win32/pthread.h:
	* pace/win32/pthread.inl:
	* pace/win32/pthread.c:

	  The first commit in a long series of emulations.

Mon Aug 14 22:24:50 2000  Luther J Baker  <luther@cs.wustl.edu>

	* pace/win32/sched.inl (pace_sched_get_priority_max):

	  Removed an extraneous '#include' left from the previous commit.

	* pace/win32/pace_dll.dsp:
	* pace/win32/pace_lib.dsp:

	  Added new files to the project files.
	  (pthreadtypes.h schedtypes.h)

Mon Aug 14 21:41:24 2000  Luther J Baker  <luther@cs.wustl.edu>

	* pace/win32/pthreadtypes.h:
	* pace/win32/schedtypes.h:

	  Added to repository to break up the complexity
	  of the code and avoid circular dependencies.

	* pace/win32/types.h:

	  Updated declarations to remove circular dependencies.

	* pace/win32/sched.h:

	  Updated to use schedtypes.h.

	* pace/win32/pthread.h:

	  Updated to use pthreadtypes.h.

	* pace/pthread.h:

	  Updated signatures to use pace prefixed types.

Thu Aug 10 04:18:14 2000  John Heitmann  <jwh1@cs.wustl.edu>

	* tests/Stdio_Test.c:
	  Changed a c++ style comment to a c style comment.

	* pace/fcntl.h
	* pace/mqueue.h
	* pace/semaphore.h
	* pace/stdio.h
	  Removed global scope modifier, since it should be
	  supplied by the client.
