@@ -1,3 +1,10 @@
+Mon Aug 21 20:34:51 2000  Luther J Baker  <luther@cs.wustl.edu>
+
+	* pace/config/features.h:
+
+	  Updated to reflect PACE_HAS_MFC and PACE_MT_SAFE.
+	  Following ace/config-win32-common.h.
+
 Mon Aug 21 19:40:23 2000 Luther J Baker  <luther@cs.wustl.edu>
 
 	* pace/win32/pthread.c (pthread_attr_init):
